# pulpchat-bot

./: .gitignore  Makefile  NOTES.md  README.md  test_analyzer.ipynb
cleaning/: clean_debates_full_v2.csv  clean_debates_full_v3.csv  clean_titles.json  procon_cleaner.ipynb  procon_cleaner_v3.ipynb
data/: README.md
data/procon/: a_to_z_debates_dirty.csv  archived_debates_full_v2.csv  titles.csv
data/procon/cleaned/: clean_debates_debug_full_v3.json  clean_dirty_debates.csv  clean_titles.json
data/transcription_data/: forefrontDataMin.jsonl  tmzOutput.json
js/: README.md  package-lock.json  package.json
js/src/: index.js
python/: main.py  neo.py  prompts.py
python/cleaning/: procon_cleaner.ipynb  procon_cleaner.py
rust/: Cargo.toml
rust/src/: procon.rs  twitter.rs
src/: aws.rs  data.rs  main.rs  transcribe.rs
