[package]
name = "pulpchatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.0"
aws-sdk-dynamodb = "0.25.1"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
futures-util = "0.3.28"
tokio-stream = "0.1.12"
aws-smithy-types = "0.55.1"
eyre = "0.6.8"
reqwest = "0.11.14"
clap = { version = "4.1.6", features = ["derive"] }
soup = "0.5.1"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]